# bjson_c

./: .clang-format  .clang-tidy  .gitignore  00_clean.sh  01_prepare.sh  02_build.sh  03_test.sh  04_linter.sh  05_lint_style.sh  99_all.sh  CMakeLists.txt  ChangeLog.md  LICENSE  README  README.md  TODO.md  build.sh  prepare.sh
doc/public/: content.html  index.html  toc.html
examples/: CMakeLists.txt  bjson-example-decode.c  bjson-example-decoder.cpp  bjson-example-encode.c  bjson-example-encoder.cpp
src/: CMakeLists.txt  bjson-common.h  bjson-constants.h  bjson-encode.c
src/src-c/: CMakeLists.txt  bjson-common.c  bjson-common.h  bjson-constants.h  bjson-debug.c  bjson-debug.h  bjson-decode.c  bjson-decode.h  bjson-encode.c  bjson-encode.h
src/src-cpp/: BjsonCommon.hpp  BjsonDecoder.hpp  BjsonEncoder.hpp  CMakeLists.txt
tests/: CMakeLists.txt  bjson-generate-cases.js  bjson-test.c  run-tests.sh
tests/cases/: 04-pos-int8.bjson.gold  05-pos-int16.bjson  05-pos-int16.bjson.gold  06-pos-int32.bjson.gold  07-pos-int64.bjson  07-pos-int64.bjson.gold  08-neg-int8.bjson.gold  09-neg-int16.bjson  09-neg-int16.bjson.gold  10-neg-int32.bjson  10-neg-int32.bjson.gold  11-neg-int64.bjson  11-neg-int64.bjson.gold  15-float64.bjson  15-float64.bjson.gold  16-short-string.bjson  16-short-string.bjson.gold  17-string.bjson  17-string.bjson.gold  18-long-string.bjson  18-long-string.bjson.gold  26-strict-zero.bjson.gold  27-strict-one.bjson.gold  32-short-array.bjson  32-short-array.bjson.gold  33-array.bjson  33-array.bjson.gold  34-long-array.bjson  34-long-array.bjson.gold  (+81 more)
